Fix CSS issues on index page: rider retirement error message not centred; insufficient space between filter options and rider 'cards'; too much space above rider name at top of cards

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ label {
 .errorMsg {
   margin: 5px 30px 0 30px;
   color: red;
+  text-align: center;
 }
 
 .flexrow {
@@ -89,7 +90,7 @@ a:hover {
   font-size: smaller;
 }
 
-.filters + .dbError {
+.filters + .errorMsg {
   margin-top: 30px;
 }
 
@@ -110,7 +111,7 @@ a:hover {
 }
 
 h3 {
-  margin-bottom: 7.5px;
+  margin: 0 0 7.5px 0;
   font-size: larger;
   text-align: center;
 }
